@@ -25,6 +25,7 @@ require( './plugins/AESPlugin' ).register();
 require( './plugins/HKDFPlugin' ).register();
 require( './plugins/PBKDF2Plugin' ).register();
 require( './plugins/RSAPlugin' ).register();
+require( './plugins/PasswordPlugin' ).register();
 
 const path = require( 'path' );
 
