@@ -39,7 +39,7 @@ Features:
 
 Reference implementation of:
  
-* [FTN13: FutoIn Secure Vault](http://specs.futoin.org/draft/preview/ftn13_secure_vault.html)
+* [FTN13: FutoIn Secure Vault](https://specs.futoin.org/final/preview/ftn13_secure_vault.html)
 
 Author: [Andrey Galkin](mailto:andrey@futoin.org)
 
